--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.2.2"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
